[package]
name = "bevy_psx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "x11",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_gltf",
    "bevy_scene",
    "bevy_pbr",
    "tonemapping_luts",
    "ktx2",
    "png",
    "zstd",
    "multi-threaded",
] }

[dev-dependencies]
